--- a/test/xhr.html
+++ b/test/xhr.html
@@ -10,8 +10,7 @@
 			async: true,
 			packages: [
 				'dojo',
-				'request',
-				{ name: 'es5-shim', location: 'es5-shim', main: 'es5-shim' }
+				'request'
 			],
 			aliases: [
 				[/^dojo\/request\/(.*)$/g, function(mid, end){
