--- a/test/xhr.html
+++ b/test/xhr.html
@@ -1,56 +1,209 @@
-<!DOCTYPE HTML>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>XHR Test</title>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+	"http://www.w3.org/TR/html4/strict.dtd">
+<html>
+	<head>
+		<title>dojo/request/xhr</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<style type="text/css">
+			@import "../../dojo/resources/dojo.css";
+		</style>
+		<script>
+			var dojoConfig = {
+				baseUrl: '../..',
+				async: true,
+				packages: [
+					'dojo',
+					{ name: 'doh', location: 'util/doh' },
+					'request'
+				],
+				aliases: [
+					[/^dojo\/request\/(.*)$/g, function(mid, end){
+						return 'request/' + end;
+					}],
+					['dojo/request', 'request/main']
+				]
+			};
+		</script>
+		<script type="text/javascript" src="../../dojo/dojo.js"></script>
+		<script type="text/javascript">
+			require(["dojo/request/xhr", "dojo/_base/lang", "doh", "dojo/domReady!"], function(xhr, lang, doh){
+				doh.register("dojo/request/xhr", 
+					[
+						function xhrGet(t){
+							var d = new doh.Deferred();
+							var td = xhr.get("xhr.html", {
+								preventCache: true
+							}).then(function(responseData){
+								t.is(4, responseData.xhr.readyState);
+								return responseData;
+							});
+							t.t(!!(td.then && td.cancel));
+							td.then(lang.hitch(d, "callback"));
+							return d;
+						},
+						function xhrGet404(t){
+							var d = new doh.Deferred();
+							var td = xhr.get("xhr_blarg.html").then(
+								function(responseData){
+									d.errback(false);
+								},
+								d.getTestCallback(function(error){
+									t.is(404, error.responseData.status);
+									return error;
+								})
+							);
+							return d;
+						},
+						function xhrGetQuery(t){
+							var d = new doh.Deferred();
+							var td = xhr.get("xhrDummyMethod.php?color=blue", {
+								query: {
+									foo: [ "bar", "baz" ],
+									thud: "thonk",
+									xyzzy: 3
+								},
+								handleAs: "json"
+							}).then(d.getTestCallback(function(responseData){
+								t.is("xhrDummyMethod.php?color=blue&foo=bar&foo=baz&thud=thonk&xyzzy=3",
+									responseData.url);
 
-	<script>
-		var dojoConfig = {
-			baseUrl: '../..',
-			async: true,
-			packages: [
-				'dojo',
-				'request'
-			],
-			aliases: [
-				[/^dojo\/request\/(.*)$/g, function(mid, end){
-					return 'request/' + end;
-				}],
-				['dojo/request', 'request/main']
-			]
-		};
-	</script>
-	<script src="../../dojo/dojo.js"></script>
-	<script>
-		require(["dojo/request"], function(request){
-			request.get('data.json', {
-				handleAs: 'json',
-				headers: { Range: '1-2' },
-				query: {
-					foo: 'bar'
-				}
-			}).then(function(responseData){
-				console.log(responseData);
-			}, function(err){
-				console.log(err);
+								var query = responseData.response.query;
+
+								t.t(!!(query.color && query.foo && query.foo.length && query.thud && query.xyzzy));
+								t.is("blue", query.color);
+								t.is(2, query.foo.length);
+								t.is("thonk", query.thud);
+								t.is(3, query.xyzzy);
+							}));
+							return d;
+						},
+						function xhrPost(t){
+							var d = new doh.Deferred();
+
+							var callback = d.getTestCallback(function(responseData){
+								if(responseData.responseData){
+									responseData = responseData.responseData;
+								}
+
+								t.t(xhr.isDocumentOk(responseData.xhr) || responseData.status == 405);
+							});
+							var td = xhr.post("xhrDummyMethod.php", {
+								data: { color: "blue"},
+								handleAs: "json"
+							}).then(d.getTestCallback(function(responseData){
+								t.t(!!responseData.response);
+								var post = responseData.response.post;
+
+								t.t(!!(post && post.color));
+								t.is("blue", post.color);
+							}), function(error){
+								d.errback(error);
+							});
+							return d;
+						},
+						function xhrPostWithQuery(t){
+							var d = new doh.Deferred();
+
+							var td = xhr.post("xhrDummyMethod.php", {
+								query: {
+									foo: [ "bar", "baz" ],
+									thud: "thonk",
+									xyzzy: 3
+								},
+								data: { color: "blue" },
+								handleAs: "json"
+							}).then(d.getTestCallback(function(responseData){
+								t.t(!!responseData.response);
+
+								var query = responseData.response.query,
+									post = responseData.response.post;
+
+								t.t(!!(query && query.foo && query.foo.length && query.thud && query.xyzzy));
+								t.t(!!(post && post.color));
+								t.is(["bar", "baz"], query.foo);
+								t.is("thonk", query.thud);
+								t.is(3, query.xyzzy);
+								t.is("blue", post.color);
+							}), function(error){
+								d.errback(error);
+							});
+							return d;
+						},
+						function rawXhrPost(t){
+							var d = new doh.Deferred();
+
+							var td = xhr.post("xhrDummyMethod.php", {
+								data: "foo=bar&color=blue&height=average",
+								handleAs: "json"
+							}).then(d.getTestCallback(function(responseData){
+								t.t(!!responseData.response);
+
+								var post = responseData.response.post;
+
+								t.t(!!(post && post.foo && post.color && post.height));
+								t.is("bar", post.foo);
+								t.is("blue", post.color);
+								t.is("average", post.height);
+							}), function(error){
+								d.errback(error);
+							});
+
+							return d;
+						},
+						function xhrPut(t){
+							var d = new doh.Deferred();
+
+							var td = xhr.put("xhrDummyMethod.php", {
+								query: { foo: "bar" },
+								data: { color: "blue"},
+								handleAs: "json"
+							}).then(d.getTestCallback(function(responseData){
+								t.t(!!responseData.response);
+
+								var put = responseData.response.put;
+
+								t.t(!!(put && put.color));
+								t.is("blue", put.color);
+							}), function(error){
+								d.errback(error);
+							});
+							// t.t(td instanceof dojo.Deferred);
+							return d;
+						},
+						function xhrDelete(t){
+							var d = new doh.Deferred();
+							var td = xhr.del("xhrDummyMethod.php", {
+								preventCache: true,
+								handleAs: "json"
+							}).then(d.getTestCallback(function(responseData){
+								t.t(!!responseData.response);
+								t.is("DELETE", responseData.response.method);
+							}), function(error){
+								d.errback(error);
+							});
+							// t.t(td instanceof dojo.Deferred);
+							return d;
+						},
+						function xhrCancel(t){
+							var d = new doh.Deferred();
+							xhr.post("xhrDummyMethod.php")
+								.then(function(responseData){
+									d.errback(false);
+								}, d.getTestCallback(function(error){
+									t.t(error instanceof Error);
+									t.is("cancel", error.dojoType);
+								})).cancel();
+							// t.t(td instanceof dojo.Deferred);
+							return d;
+						}
+					]
+				);
+
+				doh.run();
 			});
-			request.post('post.php', {
-				headers: { Range: '1-2' },
-				query: {
-					bar: 'baz'
-				},
-				preventCache: true,
-				data: {
-					baz: 'foo'
-				}
-			}).then(function(responseData){
-				console.log(responseData.responseText);
-			}, function(err){
-				console.log(err);
-			});
-		});
-	</script>
-</head>
-<body>
-</body>
+		</script>
+	</head>
+	<body>
+	</body>
 </html>
+
